# mat4person-codex

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.openai/: hosting.json
app/: atlas-explorer.tsx  globals.css  layout.tsx  page.tsx  registry-atlas.tsx  source-ledger.tsx
data/: README.md
docs/: demo-script.md  devpost-description.md  experiment-protocol.md  pilot-plan.md  seed-rights-attestation.md  source-acquisition-ledger.md  submission-checklist.md
pipeline/: __init__.py  candidate_shard.py  cli.py  contracts.py  demo.py  evaluate.py  freeze.py  ingest.py  io.py  materialize_raw.py  pdf_ingest.py  pdf_pilot_batch.py  pilot_inventory.py  pilot_review_report.py  registry.py  review_shard.py  shards.py  source_inventory.py  source_text.py  validate_contracts.py  verification.py
runs/: README.md
schemas/: candidate-spec.schema.json  entity.schema.json  evidence.schema.json  gold-item.schema.json  migration-report.schema.json  pilot-candidate-review-report.schema.json  pilot-extraction-report.schema.json  pilot-source-manifest.schema.json  registry-provenance.schema.json  relation.schema.json  review-decisions.schema.json  run.schema.json  shard.schema.json  source-candidate.schema.json  source-text.schema.json  source.schema.json
tests/: rendered-html.test.mjs  test_candidate_review.py  test_contracts.py  test_pdf_ingest.py  test_pilot_extraction_report.py  test_pilot_inventory.py  test_pilot_review_report.py  test_pipeline.py  test_registry.py  test_source_inventory.py
worker/: index.ts
(+35 files in other folders)
